# hackathon-loto-2026

./: .gitignore  README.md
backend/: alembic.ini  pyproject.toml
backend/src/loto/: run.py
backend/src/loto/application/common/: uow.py
backend/src/loto/application/common/gateway/: bank_account_gateway.py  identity_provider.py  role_gateway.py  room_gateway.py  room_participants_gateway.py  user_gateway.py  (+1 more)
backend/src/loto/application/exceptions/: room.py  room_participants.py  uow.py  user.py
backend/src/loto/application/room/: create.py  read.py
backend/src/loto/application/room_participants/: join.py
backend/src/loto/bootstrap/: app_factory.py
backend/src/loto/bootstrap/config/: database.py  logs.py  redis.py  security.py
backend/src/loto/bootstrap/ioc/: application.py  domain.py  infrastructure.py  presentation.py  provider_registry.py  settings.py
backend/src/loto/domain/exceptions/: base.py  user.py
backend/src/loto/domain/gateway/: password_hasher.py
backend/src/loto/domain/services/: user_service.py
backend/src/loto/domain/vo/: role.py  room_status.py  room_type.py  withdraw_type.py
backend/src/loto/infrastructure/: config_loader.py
backend/src/loto/infrastructure/adapters/: ls_file_manager.py  password_hasher.py  redis_auth_session.py  types.py
backend/src/loto/infrastructure/auth/: user_session.py
backend/src/loto/infrastructure/exceptions/: auth.py
backend/src/loto/infrastructure/persistence_sqla/: __init__.py  base.py  uow.py
backend/src/loto/infrastructure/storage/: constants.py  setup_folder.py
frontend/: index.html  (+3 more)
(+89 files in other folders)
